# fwh_osm_lz

./: CLAUDE.md  README.md  USER_GUIDE.md  pyproject.toml
agent-spec/: tools-pattern.agent-spec.yaml
src/osm_lz/: __init__.py  catalog.py  catalog.yaml
src/osm_lz/ffl/: continental_full.ffl  continental_gtfs_workflows.ffl  continental_lz_workflows.ffl  continental_types.ffl
src/osm_lz/tools/: README.md  __init__.py  list-workflows.sh  list_workflows.py  submit.py  submit.sh
src/osm_lz/tools/_lib/: __init__.py  workflows.py
tests/: conftest.py  test_catalog_manifest.py  test_ffl_compiles.py
