[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osm-lz"
version = "0.1.0"
description = "Continental-scale OSM Low-Zoom road infrastructure + GTFS transit FFL workflows for Facetwork"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Ralph Lemke"}]
keywords = ["facetwork", "ffl", "openstreetmap", "osm", "low-zoom", "graphhopper", "gtfs"]

dependencies = [
    "facetwork>=0.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/rlemke/fwh_osm_lz"
"Required Handlers" = "https://github.com/rlemke/fwh_osm"

[project.entry-points."facetwork.domains"]
osm-lz = "osm_lz:domain"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
osm_lz = [
    "ffl/*.ffl",
    "ffl/*.json",
    "catalog.yaml",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "E402", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
